Fix flakiness of EnsureFrameNavigationEntriesClearedOnMismatch test.

The test was assuming ordering the tree of FrameNavigationEntries, which
is not guaranteed, since each frame can commit in arbitrary order. This CL
changes the test to find explicitly the node it needs to verify correctness.

Bug: 765107
Cq-Include-Trybots: master.tryserver.chromium.linux:linux_site_isolation
Change-Id: I5f220d6465342b11ea32acb532308f00f6af2136